Infra/kubernetes/dev/resources.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: development
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: rpc-service
  namespace: development
spec:
  replicas: 1
  selector:
    matchLabels:
      app: rpc-service
  template:
    metadata:
      labels:
        app: rpc-service
    spec:
      containers:
        - name: rpc-service
          image: fipz/rpc-service:latest
          ports:
            - containerPort: 8080
          resources:
            limits:
              cpu: "500m"
              memory: "256Mi"
            requests:
              cpu: "250m"
              memory: "128Mi"
---
apiVersion: v1
kind: Service
metadata:
  name: rpc-service
  namespace: development
spec:
  selector:
    app: rpc-service
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080
  type: ClusterIP
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: rpc-service
  namespace: development
spec:
  defaultBackend:
    service:
      name: rpc-service
      port:
        number: 80
  ingressClassName: tailscale
  tls:
    - hosts:
        - rpc-service
